Comments of review 14/03/2017

--- a/zeppelin-web/src/app/tabledata/network_settings.html
+++ b/zeppelin-web/src/app/tabledata/network_settings.html
@@ -40,7 +40,7 @@ limitations under the License.
       <h4>Globals</h4>
       <div class="form-check col-xs-4">
         <div class="form-group">
-          <label for="{{$id}}_charge">Minumin scale to show node and edge labels</label>
+          <label for="{{$id}}_charge">Minimum scale to show node and edge labels</label>
           <input type="text" class="form-control" ng-model="config.d3Graph.zoom.minScale" id="{{$id}}_minScale" />
         </div>
       </div>
