--- a/zeppelin-web/src/app/interpreter/interpreter.html
+++ b/zeppelin-web/src/app/interpreter/interpreter.html
@@ -395,28 +395,23 @@ limitations under the License.
             <tr>
               <th style="width:40%">name</th>
               <th style="width:40%">value</th>
-              <th style="width:20%" ng-if="valueform.$visible">action</th>
+              <th style="width:10%" ng-if="valueform.$visible">type</th>
+              <th style="width:10%" ng-if="valueform.$visible">action</th>
             </tr>
           </thead>
           <tr ng-repeat="key in setting.properties | sortByKey" >
             <td style="vertical-align: middle;">{{key}}</td>
-            <td style="vertical-align: middle;" ng-switch on="setting.properties[key].widget">
+            <td style="vertical-align: middle;" ng-switch on="setting.properties[key].type">
               <span ng-switch-default editable-textarea="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                  {{setting.properties[key].value | breakFilter}}
               </span>
-              <span ng-switch-when="string" editable-text="setting.properties[key].value" e-form="valueform" e-msd-elastic>
-                {{setting.properties[key].value}}
-              </span>
-              <span ng-switch-when="number" editable-text="setting.properties[key].value" e-widget-number e-form="valueform" e-msd-elastic>
-                {{setting.properties[key].value}}
-              </span>
-              <a ng-switch-when="url" ng-href="{{setting.properties[key].value}}" editable-text="setting.properties[key].value" e-label="setting.properties[key].value" e-form="valueform" e-msd-elastic>{{setting.properties[key].value}}</a>
               <span ng-switch-when="password" editable-password="setting.properties[key].value" e-form="valueform" e-msd-elastic>
                 {{setting.properties[key].value ? '***' : ''}}
               </span>
-              <span ng-switch-when="checkbox" editable-checkbox="setting.properties[key].value" e-form="valueform" e-msd-elastic>
-                {{setting.properties[key].value}}
-              </span>
+            </td>
+            <td style="vertical-align: middle;" ng-if="valueform.$visible">
+              <select ng-model="setting.properties[key].type" ng-options="item for item in interpreterPropertyTypes">
+              </select>
             </td>
             <td style="vertical-align: middle;" ng-if="valueform.$visible">
               <button class="btn btn-default btn-sm fa fa-remove"
@@ -430,18 +425,16 @@ limitations under the License.
                      pu-elastic-input pu-elastic-input-minwidth="180px" />
             </td>
 
-            <td style="vertical-align: middle;" ng-switch on="setting.propertyWidget">
+            <td style="vertical-align: middle;" ng-switch on="setting.propertyType">
               <textarea ng-switch-default msd-elastic ng-model="setting.propertyValue"></textarea>
-              <input ng-switch-when="string" type="text" msd-elastic ng-model="setting.propertyValue"/>
-              <input ng-switch-when="number" type="text" msd-elastic ng-model="setting.propertyValue" widget-number />
-              <input ng-switch-when="url" type="text" msd-elastic ng-model="setting.propertyValue" />
               <input ng-switch-when="password" type="password" msd-elastic ng-model="setting.propertyValue" />
-              <input ng-switch-when="checkbox" type="checkbox" msd-elastic ng-model="setting.propertyValue" />
             </td>
             <td style="vertical-align: middle;">
-              <select ng-model="setting.propertyWidget" ng-init="setting.propertyWidget=interpreterPropertyWidgets[0]"
-                      ng-options="item for item in interpreterPropertyWidgets" ng-change="defaultValueByWidget(setting)">
+              <select ng-model="setting.propertyType" ng-init="setting.propertyType=interpreterPropertyTypes[0]"
+                      ng-options="item for item in interpreterPropertyTypes">
               </select>
+            </td>
+            <td style="vertical-align: middle;">
               <button class="btn btn-default btn-sm fa fa-plus"
                       ng-click="addNewInterpreterProperty(setting.id)">
               </button>
