--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -10,7 +10,9 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<div class="navbar navbar-inverse navbar-fixed-top" style="display: none;" role="navigation" ng-class="{'displayNavBar': !asIframe}">
+<headroom class="navbar navbar-inverse navbar-fixed-top"
+          style="display: none;" role="navigation"
+          ng-class="{'displayNavBar': !asIframe}">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -109,7 +111,7 @@ limitations under the License.
       </ul>
     </div>
   </div>
-</div>
+</headroom>
 <div id="aboutModal" class="modal fade" role="dialog"
      tabindex="-1">
   <div class="modal-dialog">
