modify as comments

--- a/zeppelin-web/src/components/modal-shortcut/modal-shortcut.html
+++ b/zeppelin-web/src/components/modal-shortcut/modal-shortcut.html
@@ -32,7 +32,7 @@ limitations under the License.
            </td>
            <td>
               <div class="keys">
-                <kbd class="kbd-white">Shift</kbd> + <kbd class="kbd-white">Enter</kbd>
+                <kbd class="kbd-default">Shift</kbd> + <kbd class="kbd-default">Enter</kbd>
               </div>
             </td>
           </tr>
@@ -43,7 +43,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">C</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">C</kbd>
               </div>
             </td>
           </tr>
@@ -54,7 +54,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">P</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">P</kbd>
               </div>
             </td>
           </tr>
@@ -65,7 +65,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">N</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">N</kbd>
               </div>
             </td>
           </tr>
@@ -76,7 +76,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">D</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">D</kbd>
             </div>
           </td>
         </tr>
@@ -87,7 +87,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">A</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">A</kbd>
             </div>
           </td>
         </tr>
@@ -98,7 +98,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">B</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">B</kbd>
             </div>
           </td>
         </tr>
@@ -109,7 +109,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">Shift</kbd> + <kbd class="kbd-white">C</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">Shift</kbd> + <kbd class="kbd-default">C</kbd>
             </div>
           </td>
         </tr>
@@ -120,7 +120,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">K</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">K</kbd>
             </div>
           </td>
         </tr>
@@ -131,7 +131,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">J</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">J</kbd>
             </div>
           </td>
         </tr>
@@ -142,7 +142,7 @@ limitations under the License.
           </td>
           <td>
             <div class="keys">
-              <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt' }}</kbd> + <kbd class="kbd-white">R</kbd>
+              <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt' }}</kbd> + <kbd class="kbd-default">R</kbd>
             </div>
           </td>
         </tr>
@@ -153,7 +153,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">O</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">O</kbd>
               </div>
             </td>
           </tr>
@@ -164,7 +164,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">E</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">E</kbd>
               </div>
             </td>
           </tr>
@@ -175,7 +175,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">M</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">M</kbd>
               </div>
             </td>
           </tr>
@@ -186,7 +186,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">T</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">T</kbd>
               </div>
             </td>
           </tr>
@@ -197,7 +197,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">L</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">L</kbd>
               </div>
             </td>
           </tr>
@@ -208,7 +208,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-white">W</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">{{ isMac ? 'Option' : 'Alt'}}</kbd> + <kbd class="kbd-default">W</kbd>
               </div>
             </td>
           </tr>
@@ -219,7 +219,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">Shift</kbd> + <kbd class="kbd-white">-</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">Shift</kbd> + <kbd class="kbd-default">-</kbd>
               </div>
             </td>
           </tr>
@@ -230,7 +230,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">Shift</kbd> + <kbd class="kbd-white">+</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">Shift</kbd> + <kbd class="kbd-default">+</kbd>
               </div>
             </td>
           </tr>
@@ -246,7 +246,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">.</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">.</kbd>
               </div>
             </td>
           </tr>
@@ -257,7 +257,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">K</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">K</kbd>
               </div>
             </td>
           </tr>
@@ -268,7 +268,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">Y</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">Y</kbd>
               </div>
             </td>
           </tr>
@@ -279,7 +279,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">S</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">S</kbd>
               </div>
             </td>
           </tr>
@@ -290,7 +290,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">A</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">A</kbd>
               </div>
             </td>
           </tr>
@@ -301,7 +301,7 @@ limitations under the License.
             </td>
             <td>
               <div class="keys">
-                <kbd class="kbd-white">Ctrl</kbd> + <kbd class="kbd-white">E</kbd>
+                <kbd class="kbd-default">Ctrl</kbd> + <kbd class="kbd-default">E</kbd>
               </div>
             </td>
           </tr>
