--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -244,14 +244,20 @@ table.dataTable.table-condensed .sorting_desc:after {
   padding: 15px;
   border-bottom: 1px solid #9cb4c5;
   background-color: #3071a9;
+  border: 2px solid #3071a9;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .shortcut-modal-header .close {
-  margin-top: -2px;
+  color: #cfcfcf;
+ opacity: 1;
 }
 
 .shortcut-modal-title {
   color: white;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 table.table-shortcut {
@@ -262,12 +268,12 @@ table.table-shortcut {
 .table-shortcut > tbody > tr > th {
   background-color: #d6dde7;
   border-color: 1px solid #9cb4c5;
-  color: #337ab7;
+  color: #383a3c;
   font-size: 14px !important;
+  font-weight: 500;
 }
 
-.kbd-white {
-  color: #777777;
+.kbd-default {
   border: 1;
 }
 
