--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -251,7 +251,7 @@ table.dataTable.table-condensed .sorting_desc:after {
 
 .shortcut-modal-header .close {
   color: #cfcfcf;
- opacity: 1;
+  opacity: 1;
 }
 
 .shortcut-modal-title {
@@ -269,12 +269,20 @@ table.table-shortcut {
   background-color: #d6dde7;
   border-color: 1px solid #9cb4c5;
   color: #383a3c;
-  font-size: 14px !important;
+  font-size: 15px !important;
   font-weight: 500;
+}
+
+.table-shortcut > tbody > tr > td {
+  border-top: 0px;
+  padding: 5px;
+  vertical-align: middle;
+  font-size: 14px !important;
 }
 
 .kbd-default {
   border: 1;
+  font-size: 10px !important;
 }
 
 /*
