--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -222,14 +222,67 @@ table.dataTable.table-condensed .sorting_desc:after {
   cursor: pointer;
 }
 
-.dropdown-menu .shortcut-icon{
+.dropdown-menu .shortcut-icon {
   padding-right: 7px;
   float: left;
 }
 
-.dropdown-menu .shortcut-keys{
+.dropdown-menu .shortcut-keys {
   float: right;
   color: #999;
+}
+
+.modal-dialog .table-scroll {
+  max-height: 70vh;
+  min-width: 160px;
+  overflow: auto;
+  overflow-y: scroll;
+}
+
+.shortcut-modal-header {
+  min-height: 16.428571429px;
+  padding: 15px;
+  border-bottom: 1px solid #9cb4c5;
+  background-color: #3071a9;
+  border: 2px solid #3071a9;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.shortcut-modal-header .close {
+  color: #cfcfcf;
+  opacity: 1;
+}
+
+.shortcut-modal-title {
+  color: white;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+table.table-shortcut {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
+.table-shortcut > tbody > tr > th {
+  background-color: #d6dde7;
+  border-color: 1px solid #9cb4c5;
+  color: #383a3c;
+  font-size: 15px !important;
+  font-weight: 500;
+}
+
+.table-shortcut > tbody > tr > td {
+  border-top: 0px;
+  padding: 5px;
+  vertical-align: middle;
+  font-size: 14px !important;
+}
+
+.kbd-default {
+  border: 1;
+  font-size: 10px !important;
 }
 
 /*
