--- a/zeppelin-web/src/components/navbar/navbar-noteList-elem.html
+++ b/zeppelin-web/src/components/navbar/navbar-noteList-elem.html
@@ -21,13 +21,15 @@ limitations under the License.
   <expand-collapse>
       <div ng-mouseenter="showFolderButton=true" ng-mouseleave="showFolderButton=false">
         <a class="notebook-list-item" href="javascript:void(0)">
-          <div style="display: inline-block" ng-if="node.id !== navbar.TRASH_FOLDER_ID">
+          <div ng-if="node.id !== navbar.TRASH_FOLDER_ID">
             <i style="font-size: 10px; margin-right: 5px;"  class="icon-folder"></i>
             <span>{{noteName(node)}}</span>
             <i data-toggle="modal" data-target="#noteNameModal" ng-controller="NotenameCtrl as notenamectrl"
-                ng-click="notenamectrl.getInterpreterSettings()" data-path="{{node.id}}"
-                style="font-size: 12px; margin-left: 5px; margin-right: 5px;"
-                ng-show="showFolderButton" class="fa fa-plus">
+              ng-click="notenamectrl.getInterpreterSettings()" data-path="{{node.id}}"
+              style="font-size: 12px; margin-left: 5px; margin-right: 5px;"
+              ng-show="showFolderButton" class="fa fa-plus"
+              uib-tooltip="Create new note"
+              tooltip-placement="{{calculateTooltipPlacement(node)}}">
             </i>
           </div>
           <div ng-if="node.id === navbar.TRASH_FOLDER_ID">
@@ -35,7 +37,6 @@ limitations under the License.
             <span>Trash</span>
           </div>
         </a>
-
       </div>
       <div class="expandable" style="color: black;">
         <ul>
