[ZEPPELIN-2442] button to create note into folder (navbar)
### What is this PR for?
Added button to create new note into folder (navbar)

### What type of PR is it?
Feature

### What is the Jira issue?
https://issues.apache.org/jira/browse/ZEPPELIN-2442

### Screenshots (if appropriate)
![peek 2017-04-21 15-48](https://cloud.githubusercontent.com/assets/25951039/25274624/5c4707be-26aa-11e7-8aa5-2c895fc1efb8.gif)

### Questions:
* Does the licenses files need update? no
* Is there breaking changes for older versions? no
* Does this needs documentation? no

Author: Tinkoff DWH <tinkoff.dwh@gmail.com>

Closes #2275 from tinkoff-dwh/ZEPPELIN-2442 and squashes the following commits:

715520b [Tinkoff DWH] ZEPPELIN-2442 added tooltip
2ae5bdc [Tinkoff DWH] Merge remote-tracking branch 'origin/master' into ZEPPELIN-2442
39846f4 [Tinkoff DWH] [ZEPPELIN-2442] button to create note into folder (navbar)

--- a/zeppelin-web/src/app/home/home.css
+++ b/zeppelin-web/src/app/home/home.css
@@ -133,6 +133,7 @@ a.navbar-brand:hover {
 .dropdown-menu > .scrollbar-container > li > a,
 .dropdown-menu .notebook-list-item {
   display: block;
+  text-decoration: none;
   padding: 1px 10px;
   clear: both;
   font-weight: normal;
@@ -294,7 +295,7 @@ a.navbar-brand:hover {
 #notebook-list {
   position: relative;
   overflow: hidden;
-  display: inline;
+  display: inline-block;
 }
 
 @media (min-width: 768px) {
