--- a/zeppelin-web/src/components/navbar/navbar-noteList-elem.html
+++ b/zeppelin-web/src/components/navbar/navbar-noteList-elem.html
@@ -12,20 +12,27 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<a class="notebook-list-item" ng-if="navbar.isFilterNote(note) && !note.children" href="#/notebook/{{note.id}}">
-  <i style="font-size: 10px; margin-right: 5px;" ng-class="query.q && note.isTrash ? 'fa fa-trash-o' : 'icon-doc'" ></i>
-  <span>{{noteName(note)}}</span>
+<a class="notebook-list-item" ng-if="navbar.isFilterNote(node) && !node.children" href="#/notebook/{{node.id}}">
+  <i style="font-size: 10px; margin-right: 5px;" ng-class="query.q && node.isTrash ? 'fa fa-trash-o' : 'icon-doc'" ></i>
+  <span>{{noteName(node)}}</span>
 </a>
 
-<li ng-if="note.children" ng-click="$event.stopPropagation()">
+<li ng-if="node.children">
   <expand-collapse>
-      <div>
+      <div ng-mouseenter="showFolderButton=true" ng-mouseleave="showFolderButton=false">
         <a class="notebook-list-item" href="javascript:void(0)">
-          <div ng-if="note.id !== navbar.TRASH_FOLDER_ID">
+          <div ng-if="node.id !== navbar.TRASH_FOLDER_ID">
             <i style="font-size: 10px; margin-right: 5px;"  class="icon-folder"></i>
-            <span>{{noteName(note)}}</span>
+            <span>{{noteName(node)}}</span>
+            <i data-toggle="modal" data-target="#noteNameModal" ng-controller="NotenameCtrl as notenamectrl"
+              ng-click="notenamectrl.getInterpreterSettings()" data-path="{{node.id}}"
+              style="font-size: 12px; margin-left: 5px; margin-right: 5px;"
+              ng-show="showFolderButton" class="fa fa-plus"
+              uib-tooltip="Create new note"
+              tooltip-placement="{{calculateTooltipPlacement(node)}}">
+            </i>
           </div>
-          <div ng-if="note.id === navbar.TRASH_FOLDER_ID">
+          <div ng-if="node.id === navbar.TRASH_FOLDER_ID">
             <i style="font-size: 12px; margin-right: 5px;" class="fa fa-trash-o"></i>
             <span>Trash</span>
           </div>
@@ -33,8 +40,8 @@ limitations under the License.
       </div>
       <div class="expandable" style="color: black;">
         <ul>
-          <li ng-repeat="note in note.children | orderBy:node:false:navbar.arrayOrderingSrv.noteComparator track by $index"
-              ng-class="{'active' : navbar.isActive(note.id)}"
+          <li ng-repeat="node in node.children | orderBy:node:false:navbar.arrayOrderingSrv.noteComparator track by $index"
+              ng-class="{'active' : navbar.isActive(node.id)}"
               ng-include="'components/navbar/navbar-noteList-elem.html'">
           </li>
         </ul>
