fix: Commit graph config when closing

--- a/zeppelin-web/src/app/notebook/paragraph/result/result.html
+++ b/zeppelin-web/src/app/notebook/paragraph/result/result.html
@@ -25,7 +25,7 @@ limitations under the License.
 
     <div ng-if="type=='TABLE'"
          ng-style="getPointerEvent()">
-      <!-- graph setting -->
+      <!-- setting -->
       <div class="option lightBold" style="overflow: visible;"
            ng-show="config.graph.optionOpen && !asIframe && !viewOnly">
         <div ng-repeat="viz in builtInTableDataVisualizationList track by $index"
