fix: Set offset, tolerance

--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -10,7 +10,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<headroom class="navbar navbar-inverse navbar-fixed-top"
+<headroom tolerance="10" offset="30" class="navbar navbar-inverse navbar-fixed-top"
           style="display: none;" role="navigation"
           ng-class="{'displayNavBar': !asIframe}">
   <div class="container">
