fix: Add tooltip for description

--- a/zeppelin-web/src/app/visualization/builtins/visualization-table-setting.html
+++ b/zeppelin-web/src/app/visualization/builtins/visualization-table-setting.html
@@ -40,7 +40,9 @@ limitations under the License.
       </tr>
 
       <tr data-ng-repeat="optSpec in tableOptionSpecs">
-        <td style="font-weight: 400; vertical-align: middle;">{{optSpec.name}}</td>
+        <td style="font-weight: 400; vertical-align: middle;">
+          <span uib-tooltip="{{optSpec.description}}" tooltip-placement="right">{{optSpec.name}}</span>
+        </td>
         <td>
           <div ng-if="isInputWidget(optSpec)"
                class="input-group">
