fix: Add tooltip and change icon for restore

--- a/zeppelin-web/src/app/visualization/builtins/visualization-table-setting.html
+++ b/zeppelin-web/src/app/visualization/builtins/visualization-table-setting.html
@@ -18,8 +18,9 @@ limitations under the License.
     <span style="float: right;">
        <div class="btn-group" role="group" aria-label="...">
          <div type="button" ng-click="resetTableOption()"
-              class="btn btn-default" style="padding: 2px 5px 2px 5px;">
-           <i class="fa fa-trash-o" aria-hidden="true"></i>
+              uib-tooltip="Restore the default setting" tooltip-placement="left"
+              class="btn btn-default" style="font-size: 11px; padding: 2px 5px 2px 5px;">
+           <i class="fa fa-undo" aria-hidden="true"></i>
          </div>
        </div>
     </span>
