--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -21,7 +21,7 @@ limitations under the License.
         <span class="icon-bar"></span>
       </button>
       <!-- title -->
-      <a class="navbar-brand" href="#/">
+      <a class="navbar-brand navbar-logo" href="#/">
         <img style="margin-top: -7px;" src="assets/images/zepLogoW.png" width="50" alt="Zeppelin" />
       </a>
       <a class="" href="#/">
@@ -33,8 +33,8 @@ limitations under the License.
       <ul class="nav navbar-nav" ng-if="ticket">
         <!-- menu: Notebook -->
         <li class="dropdown notebook-list-dropdown" uib-dropdown>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle>
-            <span class="navbar-menu">Notebook</span>
+          <a href="#" class="navbar-menu dropdown-toggle" data-toggle="dropdown" uib-dropdown-toggle>
+            <span class="">Notebook</span>
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li ng-controller="NotenameCtrl as notenamectrl"><a href="" data-toggle="modal" data-target="#noteNameModal" ng-click="notenamectrl.getInterpreterSettings()"><i class="fa fa-plus"></i> Create new note</a></li>
@@ -56,39 +56,26 @@ limitations under the License.
         </li>
         <!-- menu: Job -->
         <li>
-          <a href="#/jobmanager">
-            <span class="navbar-menu">Job</span>
+          <a class="navbar-menu" href="#/jobmanager">
+            <span class="">Job</span>
           </a>
         </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right" style="margin-right:5px;">
         <li class="nav-component" ng-if="ticket">
-        <!--TODO(bzz): move to Typeahead https://angular-ui.github.io/bootstrap  -->
 
           <form role="search" data-ng-model="navbar.searchForm"
-            style="display: inline-block; margin: 0px"
-             class="navbar-form"
-             ng-submit="navbar.search(navbar.searchForm.searchTerm)">
-            <div class="input-group">
-              <input
-                type="text"
-                ng-model="navbar.searchForm.searchTerm"
-                id="searchTermId"
-                ng-disabled="!navbar.connected"
-                class="form-control"
-                placeholder="Search your Notes"
-              />
-              <span class="input-group-btn">
-                <button
-                  type="submit"
-                  class="btn btn-default"
-                  ng-disabled="!navbar.connected || !navbar.searchForm.searchTerm"
-                >
-                  <i class="glyphicon glyphicon-search"></i>
-                </button>
-              </span>
-            </div>
+                style="display: inline-block; margin: 0px"
+                class="navbar-form"
+                ng-submit="navbar.search(navbar.searchForm.searchTerm)">
+            <input
+              type="text"
+              ng-model="navbar.searchForm.searchTerm"
+              ng-disabled="!navbar.connected"
+              id="navbar-search"
+              class="form-control navbar-search"
+              placeholder="&#xf002 Search" />
           </form>
         </li>
         <li style="margin-left: 10px;">
